test/libsolidity/syntaxTests/pragma/unterminated_version.sol
pragma solidity 0.4.3
pragma abicoder v2;
// ----
// ParserError 1684: (0-41): Invalid version pragma. Expected the start of a version number but instead found character 'p'. Version number is invalid or the pragma is not terminated with a semicolon.
